@@ -38,3 +38,13 @@ class Window(object):
             log = logging.getLogger('view')
             log.error('unknown view type: '+view_type)
             del log
+
+    @staticmethod
+    def create_wizard(action, datas, parent, state='init', direct_print=False,
+            email_print=False, email=None, name=False, context=None):
+        from tryton.gui import Main
+        from wizard import Wizard
+        win = Wizard(parent, name=name)
+        Main.get_main().win_add(win)
+        win.run(action, datas, state=state, direct_print=direct_print,
+                email_print=email_print, email=email, context=context)
